<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dahsboard"
    android:padding="30dp"
    tools:context=".DahsboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bienvenido"
                    android:textColor="@color/white"
                    android:textSize="40sp">

                </TextView>
                <TextView
                    android:id="@+id/txtNombreApellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Usuario Nombre: "
                    android:textColor="@color/white">

                </TextView>
                <TextView
                    android:id="@+id/txtCodigoUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="codigo : "
                    android:textColor="@color/white"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/avatar">

                </ImageView>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvEstadistica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#D6FFE5"
                    app:cardCornerRadius="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="186dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/estadistic"
                            android:layout_gravity="center">

                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/estadistica"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:id="@+id/cvNuevaColeccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#D6FFE5"
                    app:cardCornerRadius="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground">

                    <LinearLayout
                        android:layout_width="186dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:src="@drawable/new_recolection"
                            android:layout_gravity="center">

                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nueva_recoleccion"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:layout_gravity="center">

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>




        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="122dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvHistorial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#D6FFE5"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/history2"
                            android:padding="8dp"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/historial"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cvMisDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="#D6FFE5"
                    android:layout_gravity="center"
                    app:cardCornerRadius="20dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/info"
                            android:padding="8dp"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mis_datos"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:gravity="center"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>


        </LinearLayout>



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnCerrarSesion"
            android:text="@string/cerrar_sesión"
            android:drawableLeft="@drawable/logout1"
            android:backgroundTint="#D6FFE5"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:strokeColor="#5E5F6B"

            app:strokeWidth="2dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnDesarrollado"
            android:backgroundTint="#D6FFE5"
            android:text="@string/desarrollo"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            />




    </LinearLayout>

</ScrollView>